fixed styles of demo button, need to fix positioning so navbar buttons do not wrap on small screens

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -37,6 +37,14 @@
   color: var(--white3);
 }
 
+.nav-bar-demo {
+  border: none;
+}
+
+.nav-bar-demo:hover {
+  cursor: pointer;
+}
+
 #login-signup {
   grid-column-start: 3;
 }
